# cmake_project_example

./: CMakeLists.txt  Dependency.cmake  README.md
src/: buffer.cpp  buffer.h  common.h  context.cpp  context.h  image.cpp  main.cpp  program.cpp  program.h  shader.cpp  shader.h  texture.cpp
